2003-02-11  Trey Matteson  <trey@apple.com>

	Set -seg1addr in our build styles, but not for the B&I build.
	This makes our SYMROOTS from B&I usable to determine symbols from crash
	logs from the field.
	Also nuked DeploymentFat build style.

        Reviewed by Ken.

        * WebCore.pbproj/project.pbxproj:

2003-02-10  David Hyatt  <hyatt@apple.com>

	Inline box model landing, stage 1.  Doesn't really change
	much of anything visually yet.  Just builds a bunch of boxes
	and positions them, but those boxes aren't used yet.

	Also fixing repaint() to understand not to dirty outside
	overflow:hidden clipped ancestors.

	Fixed two table bugs in table painting as well.
	
        Reviewed by kocienda

        * WebCore.pbproj/project.pbxproj:
        * khtml/rendering/bidi.cpp:
        * khtml/rendering/bidi.h:
        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_block.h:
        * khtml/rendering/render_box.cpp:
        (RenderBox::position):
        (RenderBox::repaintRectangle):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::addChild):
        (RenderFlow::deleteLineBoxes):
        (RenderFlow::detach):
        (RenderFlow::createInlineBox):
        * khtml/rendering/render_flow.h:
        * khtml/rendering/render_image.cpp:
        (RenderImage::paintObject):
        * khtml/rendering/render_inline.cpp:
        * khtml/rendering/render_inline.h:
        * khtml/rendering/render_line.cpp: Added.
        (InlineBox::detach):
        (throw):
        (InlineBox::operator delete):
        (InlineFlowBox::marginLeft):
        (InlineFlowBox::marginRight):
        (InlineFlowBox::marginBorderPaddingLeft):
        (InlineFlowBox::marginBorderPaddingRight):
        (InlineFlowBox::getFlowSpacingWidth):
        (InlineFlowBox::nextOnLineExists):
        (InlineFlowBox::prevOnLineExists):
        (InlineFlowBox::onEndChain):
        (InlineFlowBox::determineSpacingForFlowBoxes):