@@ -1,3 +1,12 @@
+2003-02-11  Darin Adler  <darin@apple.com>
+
+        Reviewed by Dave.
+
+        - fixed 3170403 -- nil-dereference in addEventListener
+
+        * khtml/ecma/kjs_dom.cpp: (DOMNodeProtoFunc::tryCall): Check getJSEventListener result for nil.
+        * khtml/ecma/kjs_window.cpp: (WindowFunc::tryCall): Check getJSEventListener result for nil.
+
 2003-02-11  Trey Matteson  <trey@apple.com>
 
 	Set -seg1addr in our build styles, but not for the B&I build.
